1/1.9/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong
  template:
    metadata:
      labels:
        app: pong
    spec:
      containers:
        - name: pong
          image: kostikorhonen/pong:latest
