1/1.9/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-svc
spec:
  type: ClusterIP
  selector:
    app: pong
  ports:
    - protocol: TCP
      port: 2346
      targetPort: 3000
