1/1.9/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pong-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pong
        pathType: Prefix
        backend:
          service:
            name: pong-svc
            port:
              number: 2346
